--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -89,6 +89,7 @@ jobs:
       run: |
         go mod download
         go build ./...
+        go test -v ./...
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
