--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -12,14 +12,14 @@ on:
 jobs:
 
   build:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
 
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.23.2'
+        go-version: '1.24'
         
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./inner/...
