--- a/.env.tests
+++ b/.env.tests
@@ -3,3 +3,6 @@ DB_DSN="host=127.0.0.1 port=5432 user=postgres password= dbname=idm_tests sslmod
 
 SSL_SERT=certs/ssl.cert
 SSL_KEY=certs/ssl.key
+
+
+KEYCLOAK_JWK_URL=http://localhost:9990/realms/idm/protocol/openid-connect/certs
