--- a/tests/.env.tests
+++ b/tests/.env.tests
@@ -1,5 +1,5 @@
 DB_DRIVER_NAME=postgres
-DB_DSN=host=127.0.0.1 port=5432 user=postgres password= dbname=idm_tests sslmode=disable
-
+DB_DSN="host=127.0.0.1 port=5432 user=postgres password= dbname=idm_tests sslmode=disable"
 SSL_SERT=certs/ssl.cert
 SSL_KEY=certs/ssl.key
+KEYCLOAK_JWK_URL=http://localhost:9990/realms/idm/protocol/openid-connect/certs
