--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,23 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
+# Environment variables
+.env*
+
+# IDE and tool-specific files
+.idea/
+.vscode/
+
+# Copilot instructions
+.github/
+
+# Go build files
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
 
-# Test binary, built with `go test -c`
+# Test binaries
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+# Coverage reports
+coverage.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
-# Go workspace file
-go.work
-go.work.sum
-
-# env file
-.env
-
-# specific macOs files
-.DS_Store
-
-.idea/
-
-main
-
-.github/copilot-instruction.md
