--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,41 @@
-# Секретные переменные и окружение
+# 👉 Секретные файлы окружения
 .env*
 *.env
+*.env.*
 
-# IDE и инструменты
+# 👉 IDE и инструменты
 .idea/
 .vscode/
 
-# Copilot инструкции
+# 👉 Copilot инструкции
 .github/copilot-instructions.md
 
-# Системный мусор
+# 👉 Системный мусор
 .DS_Store
 Thumbs.db
 
-# Go артефакты сборки
+# 👉 Go build артефакты и тестовые бинарники
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
 *.test
+*.tmp
+*.out
+*.log
 
-# Папки сборки
+# 👉 Временные файлы, случайные бинарники
+main
+web.test
+tests.test
+info.test
+
+# 👉 Логи, отчёты, кэш
+coverage.out
+report.json
+
+# 👉 Каталоги сборки (на будущее)
 bin/
 build/
 out/
-
-# Отчёты покрытия и лог-файлы
-coverage.out
-*.log
-
-# Временные файлы и кэш
-*.swp
-*.tmp
-*.bak
