Feature/authentication authorization (#26)
* Контекст [#505451]

* Паджинация. Limit-Offset [#505453]

* Запросы с динамическим фильтром [#505455]

* chore: trigger lint

* fixes02

* Swagger (OpenAPI) [#505456]

* Безопасность. SSL/TLS [#505457]

* safe point

* Безопасность. Подключаем аутентификацию и авторизацию в приложении [#505460]

* Save changes

* Some fixes

* Обновлён .gitignore и удалены случайные файлы

* Удалён мусор из ветки PR и обновлён .gitignore

* fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,41 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
+# 👉 Секретные файлы окружения
+.env*
+*.env
+*.env.*
+
+# 👉 IDE и инструменты
+.idea/
+.vscode/
+
+# 👉 Copilot инструкции
+.github/copilot-instructions.md
+
+# 👉 Системный мусор
+.DS_Store
+Thumbs.db
+
+# 👉 Go build артефакты и тестовые бинарники
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
-
-# Test binary, built with `go test -c`
 *.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
+*.tmp
 *.out
+*.log
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
-# Go workspace file
-go.work
-go.work.sum
-
-# env file
-.env
-
-# specific macOs files
-.DS_Store
-
-.idea/
-
+# 👉 Временные файлы, случайные бинарники
 main
+web.test
+tests.test
+info.test
 
-.github/copilot-instruction.md
-**/.env*
+# 👉 Логи, отчёты, кэш
+coverage.out
+report.json
+
+# 👉 Каталоги сборки (на будущее)
+bin/
+build/
+out/
